force-app/main/default/objects/Employee_Permission__c/Employee_Permission__c.object-meta.xml
<CustomObject>
    <label>Employee Permission</label>
    <nameField>
        <displayFormat>EmployeePermission-{000000}</displayFormat>
        <label>Employee Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>