force-app/main/default/objects/Employee_Permission__c/fields/Active_Permission__c.field-meta.xml
<CustomField>
    <fullName>Active_Permission__c</fullName>
    <formula>if (Permission_Override__c, False, 
if (Employee__r.Term_Date__c &lt; today (), False, 
if (Employee__r.Hire_Date__c &gt; today(), False,
True)))</formula>
    <label>Active Permission</label>
    <type>Checkbox</type>
</CustomField>