force-app/main/default/objects/Employee_Permission__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <referenceTo>Permission__c</referenceTo>
    <relationshipLabel>Employee Permissions</relationshipLabel>
    <relationshipName>Employee_Permissions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>