force-app/main/default/objects/Employee_Permission__c/fields/Permission_Override__c.field-meta.xml
<CustomField>
    <fullName>Permission_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this is the employee is still active at Cara but no longer holds this permission.</inlineHelpText>
    <label>Permission Override</label>
    <type>Checkbox</type>
</CustomField>